--- a/foundry.toml
+++ b/foundry.toml
@@ -3,4 +3,5 @@ src = "src"
 out = "out"
 libs = ["lib"]
 remmapings = ['@openzeppelin/contracts =lib/openzeppelin-contracts/contracts']
+ffi = true
 
