--- a/foundry.toml
+++ b/foundry.toml
@@ -2,6 +2,6 @@
 src = "src"
 out = "out"
 libs = ["lib"]
-remmapings = ['@openzeppelin/contracts =lib/openzeppelin-contracts/contracts']
+remappings = ["@openzeppelin=lib/openzeppelin-contracts"]
 ffi = true
 
